--- a/front/async/index.html
+++ b/front/async/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Redux Todos example</title>
+    <title>Redux async example</title>
   </head>
   <body>
-    <div class="todoapp" id="root">
+    <div id="root">
     </div>
     <script src="/static/bundle.js"></script>
   </body>
